--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@angular/language-service": "^17.0.2",
     "@capacitor/cli": "5.7.4",
     "@ionic/angular-toolkit": "^9.0.0",
+    "@ionic/lab": "3.2.15",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
